# DatabaseWithGoogleTest

./: CMakeLists.txt  README.md  onlyToHelp
src/database/: CMakeLists.txt  database.cpp  database.hpp  dummy.cpp  dummy.hpp  fileManager.cpp  fileManager.hpp  foo.cpp  foo.hpp  foo_if.hpp  main.cpp  rooms.cpp  rooms.hpp
src/database/include/: roomsIntf.hpp
tests/: CMakeLists.txt
tests/database/: CMakeLists.txt  database_test.cpp  fileManager_test.cpp  main_test.cpp  mockFoo.hpp  rooms_test.cpp
tests/database/include/: roomMock.hpp
